Bug 162657 - Alt+X (.uno:UnicodeNotationToggle) deletes a base character with Variation Selector (VS17 or later)
Summary: Alt+X (.uno:UnicodeNotationToggle) deletes a base character with Variation Se...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-28 04:58 UTC by Takenori Yasuda
Modified: 2024-09-02 07:38 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Takenori Yasuda 2024-08-28 04:58:24 UTC
Description:
Alt+X (.uno:UnicodeNotationToggle) deletes a base character with a variation selector in Variation Selectors Supplement block (VS17–VS256, codepoints are U+E0100–U+E01EF).
A base character with a variation selector in Variation Selectors block (VS1–VS16, codepoints are U+FE00–U+FEF) is not deleted.

Steps to Reproduce:
1.Insert characters: 侮 (U+FA30), 侮󠄁 (U+4FAE U+E0101), 侮󠄃 (U+4FAE U+E0103),侮︀ (U+4FAE U+FE00).
2.Push Alt+X to run .uno:UnicodeNotationToggle for each character.

Actual Results:
侮 (U+FA30) -> U+fa30
侮󠄁 (U+4FAE U+E0101) -> U+e0101
侮󠄃 (U+4FAE U+E0103) -> U+e0103
侮︀ (U+4FAE U+FE00) -> U+4faeU+fe00

Expected Results:
侮 (U+FA30) -> U+fa30 (or U+FA30)
侮󠄁 (U+4FAE U+E0101) -> U+4faeU+e0101 (or U+4FAEU+E0101)
侮󠄃 (U+4FAE U+E0103) -> U+4faeU+e0103 (or U+4FAEU+E0103)
侮︀ (U+4FAE U+FE00) -> U+4faeU+fe00 (or U+4FAEU+FE00)


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 22621); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo


Also occurring with the Bug "Alt+X (.uno:UnicodeNotationToggle) deletes all characters like holding down the Backspace key (https://bugs.documentfoundation.org/show_bug.cgi?id=162656)".
Comment 1 Mike Kaganski 2024-08-28 13:15:25 UTC
https://gerrit.libreoffice.org/c/core/+/172533/1
Comment 2 Commit Notification 2024-08-28 18:52:19 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ac0117713e6ce248c7725b57d709390f27dc4e62

tdf#162657: re-check the result of combining surrogates

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-09-02 07:38:30 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/a13f40bffaac592401f8c57391ea26851822a483

tdf#162657: re-check the result of combining surrogates

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.