tdf#162657: re-check the result of combining surrogates

They may constitute a combining mark, and require more characters
to the left to be processed.

Change-Id: Ie626badf66edaf44c56e0ba2d294304f139d2bca
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172533
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172549